Solved alignment issues

--- a/scss/layout/_button.scss
+++ b/scss/layout/_button.scss
@@ -11,7 +11,7 @@
   padding: 3px 10px;
   border: none;
   color: $light !important;
-  font-size: 16px;
+  font-size: 30px;
   opacity: 1 !important;
   @include border-radius(0);
   @include background-horizontal($light-blue, $light-green, $light-blue);
