--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9848,7 +9848,7 @@ a.button {
   padding: 3px 10px;
   border: none;
   color: #fff !important;
-  font-size: 16px;
+  font-size: 30px;
   opacity: 1 !important;
   -webkit-border-radius: 0;
   border-radius: 0;
